--- a/deployment.yaml
+++ b/deployment.yaml
@@ -40,12 +40,19 @@ spec:
           mountPath: /git
       containers:
       - name: sho7-app
-        image: ghcr.io/vulnapp/vulnapp:0.3.0
+        image: ghcr.io/vulnapp/vulnapp:0.4.0
         volumeMounts:
         - name: app-code
           mountPath: /app
           readOnly: true
           subPath: app
+        env:
+        - name: OTEL_RESOURCE_ATTRIBUTES
+          value: "service.name=sho7"
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: "http://my-release-k8s-infra-otel-agent:4317"
+        - name: OTEL_EXPORTER_OTLP_PROTOCOL
+          value: "grpc"
       - name: git-sync
         image: k8s.gcr.io/git-sync/git-sync:v3.2.2
         env:
