--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,6 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag ghcr.io/vulnapp/vulnapp:${{ github.event.release.tag_name }}
     - name: Login to GHCR
-      run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u Sygmei --password-stdin
+      run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u sho7-service-account --password-stdin
     - name: Upload to GHCR
       run: docker push ghcr.io/vulnapp/vulnapp:${{ github.event.release.tag_name }}
